@@ -21,7 +21,7 @@
 	<groupId>org.gridkit</groupId>
 	<artifactId>coherence-spring-integration</artifactId>
 	<packaging>jar</packaging>
-	<version>0.5-SNAPSHOT</version>
+	<version>0.5.1</version>
 	<name>spring-integration</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
@@ -39,6 +39,9 @@
 		<dependency>
 			<groupId>com.oracle.coherence</groupId>
 			<artifactId>coherence</artifactId>
+			<!-- 
+			<version>3.5.2</version>
+			 -->
 			<version>3.6.0b17229</version>
 		</dependency>
 	</dependencies>
