@@ -4,3 +4,7 @@
 * Some support for JMX
 * MemberListener support for services
 * ServiceListener support for services
+
+24 Aug 2010 (0.5.1 release)
+* [BUG] JMX null pointer exception was fixed
+* [BUG] ThreadUnlockHelper
